data/all_generated_tests/raw_wast_tests/call_indirect_StackCorruption_3998.wast
;; 7. **Invalid Context Type Check**:    - Test with a `call_indirect` referring to a non-existent or improperly defined type index. This should trigger a type context-related stack issue if the validation isn't properly managed.

(assert_invalid
  (module
    (type (func))
    (table 0 funcref)
    (func $invalid-context-type-check
      (call_indirect (type 10) (i32.const 0))
    )
  )
  "type index out of bounds"
)